--- a/Flask-React-Template/templates/public/css/style.css
+++ b/Flask-React-Template/templates/public/css/style.css
@@ -1,5 +1,195 @@
+/* roboto-300 - latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/roboto-v20-latin-300.eot'); /* IE9 Compat Modes */
+  src: local('Roboto Light'), local('Roboto-Light'),
+  url('../fonts/roboto-v20-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/roboto-v20-latin-300.woff2') format('woff2'), /* Super Modern Browsers */ url('../fonts/roboto-v20-latin-300.woff') format('woff'), /* Modern Browsers */ url('../fonts/roboto-v20-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */ url('../fonts/roboto-v20-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+
+/* roboto-regular - latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/roboto-v20-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Roboto'), local('Roboto-Regular'),
+  url('../fonts/roboto-v20-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */ url('../fonts/roboto-v20-latin-regular.woff') format('woff'), /* Modern Browsers */ url('../fonts/roboto-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */ url('../fonts/roboto-v20-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+
+
+body {
+  background-color: #000;
+  background-image: url("/public/img/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  font-family: 'Roboto', sans-serif;
+}
+
 .box {
   height: 100px;
   width: 100px;
   background: black;
+}
+
+.screen {
+  width: 100%;
+  height: 100%;
+}
+
+.screen.welcome .code-input {
+  margin-bottom: 50px;
+}
+
+.screen-content {
+  align-content: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.screen-content * {
+  margin: 0 auto;
+  width: fit-content;
+  text-align: center;
+}
+
+.app-icon {
+  width: 100px;
+  height: 100px;
+  margin: 50px auto;
+  flex: 0 1 auto;
+}
+
+.title {
+  font-size: 2em;
+  color: #000;
+}
+
+.sub-title {
+  font-size: 1.25em;
+  color: #000;
+}
+
+.code-input {
+  width: 90%;
+  flex: 1 0 auto;
+  font-size: 3em;
+}
+
+.code-input > * {
+  width: 100%;
+}
+
+.code-submit {
+  flex: 0 0 auto;
+  margin-bottom: 25px;
+}
+
+.button {
+  color: #460a40;
+  background: #FFFFFF;
+  width: 90%;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+.actions {
+  width: 100%;
+  margin-bottom: 25px;
+  flex: 0;
+}
+
+.actions > :not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.exercises {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.exercise {
+  width: 150px;
+  height: 150px;
+  background: #FFF;
+  opacity: 0.95;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.exercise.disabled {
+  opacity: 0.5;
+}
+
+.exercise > img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.exercise > div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.ex-deadlift {
+  display: flex;
+  flex-direction: column;
+  background: #FFF;
+  width: 100%;
+  height: 100%;
+}
+
+.message-prim {
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.message {
+  text-align: center;
+  flex: 0;
+  margin: 25px auto;
+}
+
+.message-sec {
+  font-size: 1.25em;
+  font-weight: 300;
+}
+
+.count {
+  font-size: 10em;
+  text-align: center;
+  flex: 1;
+}
+
+.good .actions .action {
+  background: #460a40;
+  color: #fff;
+}
+
+.bad .actions .action {
+  background: #e83b36;
+  color: #fff;
+}
+
+.panel {
+  flex: 0 0 auto;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.6);
+  padding: 20px 0;
+  margin-bottom: 25px;
+}
+
+/* TODO remove this placeholder */
+.app-icon {
+  border: 1px solid white;
+}
+
+.divider {
+  flex: 1;
 }
