--- a/Flask-React-Template/templates/static/index.html
+++ b/Flask-React-Template/templates/static/index.html
@@ -1,14 +1,15 @@
 <!- index.html ->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!-- Latest compiled and minified bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link rel="stylesheet" href="public/css/main.css">
-    <title>Flask-React Template</title>
-  </head>
-  <body>
-    <div id="app" />
-    <script src="public/bundle.js" type="text/javascript"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Latest compiled and minified bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="public/css/style.css">
+  <title>Flask-React Template</title>
+</head>
+<body>
+<div id="app"/>
+<script src="public/bundle.js" type="text/javascript"></script>
+</body>
 </html>
