--- a/Flask-React-Template/templates/static/index.html
+++ b/Flask-React-Template/templates/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!-- Latest compiled and minified bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="public/css/style.css">
     <title>Flask-React Template</title>
   </head>
   <body>
